changes to access page navigation

--- a/pages/access.html
+++ b/pages/access.html
@@ -23,7 +23,7 @@
   
           <ul class="nav masthead-nav">
             <li><a href="http://www.koara-tokyo.com/schedule.pdf">Event</a></li>
-            <li><a href="./pages/about.html">Photo</a></li>
+            <li><a href="./about.html">Photo</a></li>
             <li class="active"><a href="#">Access</a></li>
             <li><a href="./contact.html">Info</a></li>
           </ul>
