--- a/pages/contact.html
+++ b/pages/contact.html
@@ -36,6 +36,7 @@
           </div>
           
           <div>
+            <!-- Start contact information -->
             <h1>CONTACT</h1>
 
             <table class="table table-hover" id="info-table">
@@ -69,8 +70,10 @@
                   <td class="text-left">03-6423-0644</td>
                 </tr>
               </tbody>
-            </table>
+            </table> 
+            <!-- End contact -->
 
+            <!-- Start Social div -->
             <h1>SOCIAL</h1>
               
             <div class="row social-box">
